Build API to get lms series combo detail
